# voting

./: .gitignore  Anchor.toml  Cargo.toml  README.md
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-35CbNGQd1ZGPNWhJ1E9RBVzfz3tEJVqGsHg5zrNyiuYJ.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/accounts/run/: 66.11  68.9  69.8  72.6  78.5  82.4
.anchor/test-ledger/accounts/snapshot/100/: 0.14  100.0  61.13  64.12  67.10  71.7  83.3  84.2  87.1
.anchor/test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1720959497620985  MANIFEST-000063
.anchor/test-ledger/snapshot/100/: 100  status_cache
behavioral/: Cargo.toml
behavioral/src/: lib.rs  mediator.rs  observer.rs  state.rs
behavioral/src/observer/: mod.rs
client/: Cargo.toml
client/src/: main.rs
creational/: Cargo.toml
creational/src/: lib.rs  prototype.rs  singleton.rs
design-pattern/: Cargo.toml
design-pattern/src/: lib.rs
design-pattern/src/behavioural/: command.rs  interpreter.rs  mod.rs  strategy.rs  visitor.rs
design-pattern/src/creational/: builder.rs  fold.rs  mod.rs
design-pattern/src/structural/: compose_structs.rs  mod.rs
design-pattern/src/structural/fs/: folder.rs  mod.rs
idioms/: Cargo.toml
idioms/src/: collections_are_smart_pointers.rs  default.rs  lib.rs  pass_variable_to_closure.rs
idioms/src/idioms/: easy_doc_initialization.rs  mod.rs
programs/voting/: Cargo.toml
programs/voting/src/: lib.rs
smart-pointer/src/: cell.rs
src/: constructors.rs  iterating_over_an_option.rs  keep_owned_values_in_changed_enums.rs  lib.rs  main.rs  on_stack_dynamic_dispatch.rs  privacy_for_extensibility.rs  use_borrowed_types_for_arguments.rs
src/ffi/: errors.rs
structural/src/: lib.rs
structural/src/composite/: file.rs  folder.rs  mod.rs
tests/: Cargo.toml
tests/src/: lib.rs  test.rs
ts/: indes.js  indes.ts  package.json
