[workspace]
members = [ "client",
    "programs/voting"
]
resolver = "2"

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
chrono = "0.4.38"
rand = "0.8"  # Add this for randomness
sha2 = "0.10"
solana-program = "1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
