[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anyhow = "1.0.86"
chrono = { workspace = true }
clap = { version = "4.5.9", features = ["derive"] }
dotenv = "0.15.0"
solana-program = { workspace = true }
voting = { path = "../programs/voting" }
